# Alarms-and-Conditions-Rust

./: Cargo.toml  README.md  docker-compose.yml
ac-client/: Cargo.toml  README.md
ac-client/src/: browse.rs  db.rs  main.rs  subscriber.rs
ac-client/tests/: e2e.rs
ac-server/: Cargo.toml  README.md
ac-server/src/: events.rs  main.rs  simulation.rs
db/: init.sql
docs/superpowers/plans/: 2026-07-16-opcua-ac-pipeline.md
docs/superpowers/specs/: 2026-07-16-opcua-ac-pipeline-design.md
metabase/: nginx.conf
